# data_SC_ENG_AI_projects

./: .coverage  .gitignore  DATA_ENG_PROJECT_1.md  PHYSICS_MATH_PROJECTS_SUMMARY.md  README.md  STANDARDIZATION_REPORT.md  TEST_REPORT.md  _headers  index.html  open_api_proposals.md  portfolio_progress_review.md  sample_input.json  setup_models_berta.md  specsheet_project4.md
applied_math_0/: README.md  requirements.txt  streamlit_app.py
applied_math_0/src/: __init__.py  integration.py  (+1 more)
applied_math_1/: README.md
applied_math_2/: README.md  requirements.txt
applied_math_3/: README.md  requirements.txt
applied_math_4/: README.md  requirements.txt
applied_math_5/: README.md  requirements.txt
assets/: site.css  site.js
data_engineering_0/: .env.example  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.js  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pages-app.js  pages-index.html  pages-style.css  requirements.txt  schema.sql  server.js  style.css  tsconfig.json  wrangler.toml
data_engineering_1/: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data_engineering_1/.github/workflows/: ci.yml
data_engineering_1/config/: config.yaml  logging_config.yaml
data_engineering_1/dbt_project/: dbt_project.yml
data_engineering_1/dbt_project/models/marts/: fct_trips.sql
data_engineering_1/dbt_project/models/staging/: stg_trips.sql
data_engineering_1/src/: web_health.py
data_engineering_1/src/ingestion/: extractors.py  validators.py
data_engineering_1/src/orchestration/: assets.py  resources.py  schedules.py
data_engineering_1/src/transformation/: transformers.py
data_engineering_1/src/utils/: data_quality.py  logging_utils.py
data_engineering_1/tests/integration/: test_pipeline.py
data_engineering_1/tests/unit/: test_validators.py
data_engineering_2/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data_engineering_2/.github/workflows/: ci.yml
data_engineering_2/src/: api.py  database.py  kafka_consumer.py  kafka_producer.py  main.py
data_engineering_2/tests/: test_api.py  test_kafka.py
data_engineering_4/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data_engineering_4/src/: main.py  sensor_simulator.py  spark_streaming.py  storage.py
data_engineering_4/tests/: test_api.py
data_science_0/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  cost-living-api.js  cost-living-chart.vue  database-schema.sql  docker-compose.yml  index.html  package-lock.json  package.json  poland-quality-living-mvp.md  readme.md  server.js  wrangler.toml
data_science_1/: .coverage  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data_science_1/.github/workflows/: ci.yml
data_science_1/src/: app.py  ml_pipeline.py
data_science_1/tests/integration/: test_app_integration.py  test_dashboard.py
data_science_1/tests/unit/: test_app.py  test_health.py
data_science_2/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data_science_2/dashboard/: dashboard.js  index.html  style.css
data_science_2/notebooks/: 01_train_demo_model.py  model.joblib  sample_input.json
data_science_2/src/: api.py  main.py
data_science_2/tests/: test_endpoints.py  test_health.py  test_predict.py
data_science_3/: .gitignore  README.md  pyproject.toml  requirements.txt
data_science_4/: Makefile  README.md  pyproject.toml  requirements.txt
data_science_4/config/: config.yaml
data_science_4/src/: main.py  mlops_platform.py
portfolio_website/: README.md  package-lock.json  package.json
project1/: index.html
project2/: index.html
project3/: index.html
project4/: index.html
project5/: apispecs.md  cobe-europe-capitals-api.md  index.html  prediction_engine.js  prediction_engine.test.js  weather_data.js  weather_service.js
simulated_physics_0/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
simulated_physics_1/: README.md
simulated_physics_2/: README.md
simulated_physics_3/: README.md
simulated_physics_4/: README.md  requirements.txt
simulated_physics_5/: README.md
(+61 files in other folders)
