[project]
name = "data_engineering_2"
version = "0.1.0"
description = "Real-Time Data Pipeline for Urban Mobility Analytics"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "sqlalchemy",
    "psycopg2-binary",
    "kafka-python",
    "redis",
    "pytest",
    "pytest-cov",
    "dbt-core",
    "airflow"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
