[project]
name = "data_engineering_4"
version = "0.1.0"
description = "Cloud-Native Streaming Data Platform for Smart Cities"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "kafka-python",
    "pandas",
    "psycopg2-binary",
    "redis",
    "boto3",
    "pytest",
    "pytest-cov"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
